# personalcontextprotocol

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  docs.md  protocol_feedback.md
.github/workflows/: ci.yml
client/: package.json
client/src/: PcpClient.ts  cli.ts
client/tests/: client.test.ts
docs/: developer-guide.md  getting-started.md  glossary.md  how-it-works.md  index.md  production-v1-readiness.md  release-readiness.md  troubleshooting.md  what-is-pcp.md
docs/sdk/: index.md  verification.md
examples/curl/: initialize.sh  propose-memory.sh  request-context.sh  search.sh
examples/demo-client/: README.md  package.json  run-demo.ts  (+1 more)
paper/: pcp-v0.1-whitepaper.md
sdk/rust/: Cargo.toml
sdk/rust/pcp-sdk/: Cargo.toml  README.md
sdk/rust/pcp-sdk/examples/: initialize.rs
sdk/rust/pcp-sdk/src/: client.rs  contract.rs  generated_contract.rs  lib.rs  protocol.rs  types.rs
sdk/rust/pcp-sdk/tests/: conformance.rs
sdk/rust/src/: contract.rs  error.rs  http.rs  types.rs
sdk/rust/tests/: conformance.rs
server/: package.json  tsconfig.build.json
specs/: audit.md  authorization-consent.md  examples.md  index.md  lifecycle.md  methods.md  objects.md  pcp-v0.1.md  protocol.md  schema.md  scopes.md  security.md
tools/: check-generated-artifacts.mjs  verify-sdk-contracts.mjs
(+36 files in other folders)
